--- a/Object_detection.ipynb
+++ b/Object_detection.ipynb
@@ -130,6 +130,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# import library"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -926,7 +933,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# modify model"
+    "# Modify model for our task"
    ]
   },
   {
@@ -1009,8 +1016,8 @@
     "model.eval()\n",
     "\n",
     "with torch.no_grad():\n",
-    "    output = model(images)\n",
-    "    view(images=images,annos=targets, score_threshold=0, nms_iou_threshold=0, n=1, std=1, mean=0)"
+    "    outputs = model(images)\n",
+    "    view(images=images,annos=outputs, score_threshold=0, nms_iou_threshold=0, n=1, std=1, mean=0)"
    ]
   },
   {
@@ -1098,7 +1105,14 @@
    "source": [
     "state_dict = torch.load('weight.pt') # load fine-tuned state_dict\n",
     "model.load_state_dict(state_dict)\n",
-    "model = model.to(device)"
+    "model = model.to(device)\n",
+    "\n",
+    "# if you have finetuned weight\n",
+    "# from google.colab import drive\n",
+    "# drive.mount('/content/drive')\n",
+    "# state_dict = torch.load('drive/MyDrive/0.Dataset_public/weight.pt') # load fine-tuned state_dict\n",
+    "# model.load_state_dict(state_dict)\n",
+    "# model = model.to(device)"
    ]
   },
   {
@@ -1160,7 +1174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# EVALUATION (Mean Average Precision)"
+    "# Evaluation (Mean Average Precision)"
    ]
   },
   {
@@ -1194,7 +1208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# EVALUATION (FROC)"
+    "# Evaluation (FROC)"
    ]
   },
   {
