--- a/Object_detection.ipynb
+++ b/Object_detection.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dataset download"
+    "# Dataset download (Check runtime setting to use GPU)"
    ]
   },
   {
@@ -662,6 +662,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load best weight"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -669,11 +676,26 @@
    "source": [
     "state_dict = torch.load('weight.pt') # load fine-tuned state_dict\n",
     "model.load_state_dict(state_dict)\n",
-    "model = model.to(device)\n",
-    "\n",
-    "# if you have finetuned weight\n",
+    "model = model.to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if you have finetuned weight, download weight using gdrive\n",
     "# from google.colab import drive\n",
-    "# drive.mount('/content/drive')\n",
+    "# drive.mount('/content/drive')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# state_dict = torch.load('drive/MyDrive/0.Dataset_public/weight.pt') # load fine-tuned state_dict\n",
     "# model.load_state_dict(state_dict)\n",
     "# model = model.to(device)"
