--- a/Object_detection.ipynb
+++ b/Object_detection.ipynb
@@ -772,7 +772,7 @@
    "outputs": [],
    "source": [
     "from torchmetrics.detection.map import MeanAveragePrecision\n",
-    "# from torchmetrics.detection.mean_ap import MeanAveragePrecision\n",
+    "# from torchmetrics.detection.mean_ap import MeanAveragePrecision  # run this if error occurs, version problem\n",
     "metric = MeanAveragePrecision()\n",
     "\n",
     "for idx,batch in enumerate(data_loader_test):\n",
